--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.4"
+		"react-native": "0.46.4",
+		"react-native-elements": "^0.15.0",
+		"react-native-pathjs-charts": "^0.0.30",
+		"react-native-router-flux": "^4.0.0-beta.14",
+		"react-native-sqlite-storage": "^3.3.2",
+		"react-native-vector-icons": "^4.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
