--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react-native-pathjs-charts": "^0.0.30",
 		"react-native-router-flux": "^4.0.0-beta.14",
 		"react-native-sqlite-storage": "^3.3.2",
-		"react-native-vector-icons": "^4.2.0"
+		"react-native-vector-icons": "^4.2.0",
+		"recompose": "^0.24.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
