--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"currency-formatter": "^1.2.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
 		"react-native-elements": "^0.15.0",
